Review mutability (pass 1). Add ImmutableListDeserializer for Json.